--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-unit-test",
+  "name": "nodejs-logging",
   "version": "1.0.0",
-  "description": "belajar nodejs unit test",
+  "description": "belajar nodejs logging",
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
@@ -28,6 +28,10 @@
       ]
   },
   "author": "thariq maulana",
+  "dependencies": {
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "4.7.1"    
+  },
   "license": "UNLICENSED",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.23.7",
